tests/baselines/reference/interfaceIdentifierAssertionExpressionWithParseError.errors.txt
interfaceIdentifierAssertionExpressionWithParseError.ts(4,21): error TS1005: '{' expected.
interfaceIdentifierAssertionExpressionWithParseError.ts(4,21): error TS2693: 'string' only refers to a type, but is being used as a value here.
interfaceIdentifierAssertionExpressionWithParseError.ts(5,14): error TS1005: '{' expected.
interfaceIdentifierAssertionExpressionWithParseError.ts(5,14): error TS2693: 'string' only refers to a type, but is being used as a value here.


==== interfaceIdentifierAssertionExpressionWithParseError.ts (4 errors) ====
    // These were written with the expectation of parse errors.
    const interface = 'x';
    
    interface satisfies string;
                        ~~~~~~
!!! error TS1005: '{' expected.
                        ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
    interface as string;
                 ~~~~~~
!!! error TS1005: '{' expected.
                 ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
    